tests/sema/fail/v14_fail_adt_partial_field_unguarded.ep
# COMPILE_FAIL: union Node has no common embedded field name
struct Leaf { name: str }
struct Pair { value: i64 }
type Node = Leaf | Pair
fun main(): void {
    let n: Node = new Node(new Leaf { name: "x" })
    println(n.name)
}
